--- a/index.html
+++ b/index.html
@@ -7,17 +7,23 @@
         <meta charset="UTF-8">
     </head>
     <body>
-        <h1>rachel williams &#128105;&#127998;&#8205;&#128300; </h1>
+        <h1>rachel s.h. williams &#128105;&#127998;&#8205;&#128300; </h1>
         <h2>neuroscientist & science communicator</h2>
         <hr>
-        <p>HELLO! I'm a postdoc at UCL, comedian, festival comp&#233;re, <a href="twitch.com/scienceandsorcery">Dungeons & Dragons streamer</a>, and I've <sub>almost</sub> got a PhD. 
-            <br>
-            <br>
-            I've worked in labs focused on vision, smell, and hearing so if you're interested in the science of sensation (or a science sensation?) then you're in the right place.
-            <br>
-            <br>
-            As a black queer woman of Jamaican heritage, I'm passionate about celebrating the work and voices of marginalised people &#9994;&#127999; &#127987;&#65039;&#8205;&#127752; &#127471;&#127474; &#10024;
-        </p>
+        <img src="https://pbs.twimg.com/media/Fpe6lAwXoAAMWQQ?format=jpg&name=large" width: 100%; height: auto>
+
+            <p>HELLO! I'm a postdoc at UCL, comedian, festival comp&#233;re, <a href="twitch.com/scienceandsorcery">Dungeons & Dragons streamer</a>, and I've <sub>almost</sub> got a PhD. 
+                <br>
+                <br>
+                I've worked in labs focused on vision, smell, and hearing so if you're interested in the science of sensation (or a science sensation?) then you're in the right place.
+                <br>
+                <br>
+                As a black queer woman of Jamaican heritage, I'm passionate about celebrating the work and voices of marginalised people &#127752; &#9994;&#127999;&#10024;
+            </p>
+
+                
+
+        
         <hr>
         <p>
         <!--link example-->
