--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <hr>
         <img src="https://pbs.twimg.com/media/Fpe6lAwXoAAMWQQ?format=jpg&name=large" width: 100%; height: auto>
 
-            <p>HELLO! I'm a postdoc at UCL, comedian, festival comp&#233;re, <a href="twitch.com/scienceandsorcery">Dungeons & Dragons streamer</a>, and I've <sub>almost</sub> got a PhD. 
+            <p>HELLO! I'm a postdoc at UCL, comedian, festival comp&#233;re, <a href="https://twitch.com/scienceandsorcery">Dungeons & Dragons streamer</a>, and I've <sub>almost</sub> got a PhD. 
                 <br>
                 <br>
                 I've worked in labs focused on vision, smell, and hearing so if you're interested in the science of sensation (or a science sensation?) then you're in the right place.
@@ -27,11 +27,11 @@
         <hr>
         <p>
         <!--link example-->
-        <a href="twitter.com/sciwithrach" title="sciwithrach on Twitter">
+        <a href="https://twitter.com/sciwithrach" title="sciwithrach on Twitter">
             twitter
         </a>
          ~ 
-        <a href="github.com/sciwithrach" title="sciwithrach on GitHub">
+        <a href="https://github.com/sciwithrach" title="sciwithrach on GitHub">
             github
         </a>
          ~ 
