--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <hr>
         <img src="https://pbs.twimg.com/media/Fpe6lAwXoAAMWQQ?format=jpg&name=large" width: 100%; height: auto>
 
-            <p>HELLO! I'm a postdoc at UCL, comedian, festival comp&#233;re, <a href="https://twitch.com/scienceandsorcery">Dungeons & Dragons streamer</a>, and I've <sub>almost</sub> got a PhD. 
+            <p>HELLO! I'm a postdoc at UCL, comedian, festival comp&#233;re, <a href="https://twitch.com/scienceandsorcery">Dungeons & Dragons streamer</a>, and I've almost got a PhD. 
                 <br>
                 <br>
                 I've worked in labs focused on vision, smell, and hearing so if you're interested in the science of sensation (or a science sensation?) then you're in the right place.
