--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@
          <hr>
          <p>
             <b>Previous clients:</b> BBC World Service, Guerilla Science, Green Man Festival, Great Exhibition Road Festival, Science Showoff, Cheltenham Science Festival, Impossible Factual, BBC Radio 4, King's College London, and more!
+             <br> Photo credit: <a href=https://drstevecross.squarespace.com/ title="Steve Cross's website">Steve Cross</a>
          </p>
     </body>
 </html>
