--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         
         <hr>
         <p>
-        <!--link example-->
+        <!--links-->
         <a href="https://twitter.com/sciwithrach" title="sciwithrach on Twitter">
             twitter
         </a>
@@ -34,11 +34,21 @@
          <a href="mailto:rshwilliams@live.com" title="email sciwithrach">
             email
          </a>
+         ~ 
+        <a href="https://www.linkedin.com/in/rachel-williams-88517190/">
+            linkedin
+        </a>
+         ~ 
+        <a href="https://ko-fi.com/sciwithrach" title="buy me a ko-fi">
+            ko-fi
+        </a>
+
          </p>
          <hr>
          <p>
             <b>Previous clients:</b> BBC World Service, Guerilla Science, Green Man Festival, Great Exhibition Road Festival, Science Showoff, Cheltenham Science Festival, Impossible Factual, BBC Radio 4, King's College London, and more!
-             <br> Photo credit: <a href=https://drstevecross.squarespace.com/ title="Steve Cross's website">Steve Cross</a>
+             <br> 
+            <b>Photo credit:</b> <a href=https://drstevecross.squarespace.com/ title="Steve Cross's website">Steve Cross</a>
          </p>
     </body>
 </html>
