--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 
 <html>
     <head>
-        <title>sciwithrach</title>
+        <title>Rachel Williams | sciwithrach</title>
         <link rel="stylesheet" href="styles.css">
         <meta charset="UTF-8">
     </head>
